@@ -116,6 +116,22 @@ To remove or override BUFFER-LOCAL defaults, define a |LspAttach| handler: >lua
       end,
     })
 <
+
+COMMANDS                                                    *:lsp*
+
+:lsp restart {names}                                      *:lsp-restart*
+    Restarts the given language servers. If no names are given, all active
+    servers are restarted.
+
+:lsp start {names}                                        *:lsp-start*
+    Starts the given language servers. If no names are given, all configured
+    with |vim.lsp.config()| with filetype matching the current buffer are
+    started.
+
+:lsp stop {names}                                         *:lsp-stop*
+    Stops and disables the given language servers. If no names are given, all
+    servers on the current buffer are stopped.
+
 ==============================================================================
 CONFIG                                                  *lsp-config*
 
@@ -1021,12 +1037,6 @@ enable({name}, {enable})                                    *vim.lsp.enable()*
     Examples: >lua
         vim.lsp.enable('clangd')
         vim.lsp.enable({'lua_ls', 'pyright'})
-<
-
-    Example: *lsp-restart* Passing `false` stops and detaches the client(s).
-    Thus you can "restart" LSP by disabling and re-enabling a given config: >lua
-        vim.lsp.enable('clangd', false)
-        vim.lsp.enable('clangd', true)
 <
 
     Example: To dynamically decide whether LSP is activated, define a
